# Vapoursynth-EEDI3VK

./: .clang-tidy  .gitignore  README.md  meson.build
.github/workflows/: build.yml
src/: eedi3vk.cpp
src/shaders/: calc_costs.comp  copy_buffer.comp  copy_field.comp  dilate_mask.comp  interpolate.comp  viterbi_scan.comp
src/vulkan/: EEDI3Pipelines.cpp  EEDI3Pipelines.hpp  Params.hpp  Shaders.hpp  VulkanComputePipeline.cpp  VulkanComputePipeline.hpp  VulkanContext.cpp  VulkanContext.hpp  VulkanMemory.cpp  VulkanMemory.hpp  VulkanResourcePool.cpp  VulkanResourcePool.hpp
subprojects/: volk.wrap  vulkan-headers.wrap  vulkan-memory-allocator.wrap
subprojects/packagefiles/volk/: meson.build
subprojects/packagefiles/vulkan-headers/: meson.build
subprojects/packagefiles/vulkan-memory-allocator/: meson.build
